Overflow of tab navigations fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body{
 	background-color: #FFFFFF;
+	overflow-x:hidden;
 }
 
 h1{
